package Prenda;

public enum Categoria {
    SUPERIOR,INFERIOR,ACCESORIO,CALZADO;
}
