package Prenda;

public enum Color {
    Blanco, Negro, Celeste, Azul, Marrón, Cyan, Gris, Verde, GrisClaro, Magenta, Naranja, Rosa, Púrpura, Rojo, Amarillo;
// 16 como la variedad de lanas de minecraft.
}
