package Prenda;

public enum Material {
    JEAN,LANA,HILO,CUERO;
}
