package Prenda;

public enum Trama {
    LISA,RAYADA,LUNARES,ACUADROS,ESTAMPADO;
}
