package Sugerencia.Clima;

import Sugerencia.Sugerencia;

public interface Clima {
    public double getTemperatura(String Ciudad);
}
