package Sugerencia;

import Sugerencia.Filtros.Filtro;

import java.util.ArrayList;
import java.util.List;

public class GeneradorDeAtuendos {
    List<Filtro> filtros;
    List<Sugerencia> sugerencias;
    GeneradorDeAtuendos(){

    }
    private void poblarSugerencias(){
        sugerencias=new ArrayList<Sugerencia>();
    }

}
