package Usuario;

import Prenda.Prenda;

public interface Interaccion {
    public void aceptar();
    public void revertir();
}

